--- a/modular-joint-tuning.ipynb
+++ b/modular-joint-tuning.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64728b4",
+   "id": "1ca66abb",
    "metadata": {},
    "source": [
     "### Placeholder values"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af0105f",
+   "id": "be81d522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ca13bf",
+   "id": "5f863414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa24831",
+   "id": "a68a7745",
    "metadata": {},
    "source": [
     "From this, the corner A (opposite side a) has coordinates:<br>\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9b18454",
+   "id": "0143b5a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1713d8",
+   "id": "e8b1b111",
    "metadata": {},
    "source": [
     "For shorthand, say B makes an angle $s$ with the Z axis, and hence has coordinates<br>\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101c9adf",
+   "id": "9b87ef1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32aea05",
+   "id": "3e964a42",
    "metadata": {},
    "source": [
     "Thus,"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f7680b",
+   "id": "d8a20549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480ec004",
+   "id": "e43a5999",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48a39a6d",
+   "id": "32352336",
    "metadata": {},
    "source": [
     "We'll drop a perpendicular from B (say BH) onto the line AC.<br>\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f965e4d",
+   "id": "d5f26a86",
    "metadata": {},
    "source": [
     "Let $H = (h*\\sin(t), 0, h*\\cos(t))$  (since H is on line AC)"
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb36b0ec",
+   "id": "16d9671c",
    "metadata": {},
    "source": [
     "Constraint : $BH \\perp AC$<br>\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a359bace",
+   "id": "015aa23a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9031aea",
+   "id": "60a2a9d3",
    "metadata": {},
    "source": [
     "Given any vector (x, y, z), the angle that it makes with the XZ plane\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392a622b",
+   "id": "6ce7d641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb031fe",
+   "id": "1b1ea89f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45724f17",
+   "id": "ed4b28ec",
    "metadata": {},
    "source": [
     "#### Important: This does not depend on a & b. We can omit out those factors."
@@ -261,14 +261,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8512ae01",
+   "id": "fc1a8474",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "15620d3b",
+   "id": "e33ecfe0",
    "metadata": {},
    "source": [
     "### Making it all concise..."
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac1d1ab",
+   "id": "6ed4142d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9f617e",
+   "id": "3b5a76b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfea921",
+   "id": "400e96a6",
    "metadata": {},
    "source": [
     "Now, let's plot this"
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7ae4d1",
+   "id": "3ea5614d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "703e76a1",
+   "id": "f284e2c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d13e9b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,17 +344,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9edadf5",
+   "id": "46f2247c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(thetas*180/np.pi, phis*180/np.pi)"
+    "plt.plot(thetas*180/np.pi, phis*180/np.pi)\n",
+    "plt.title(\"$\\phi$ v/s $\\Theta$\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7dcab9",
+   "id": "3c0e6e44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(phis*180/np.pi, thetas*180/np.pi)\n",
+    "plt.title(\"$\\Theta$ v/s $\\phi$ (as in the diagram)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc696bb",
+   "metadata": {},
+   "source": [
+    "### Does $\\phi + 2*\\theta$ ever go to 360?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d0dc31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(thetas*180/np.pi, (phis + 2*thetas)*180/np.pi)\n",
+    "plt.title(\"$\\phi + 2*\\Theta$\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9adb1dd",
+   "metadata": {},
+   "source": [
+    "nope!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279f9f5f",
    "metadata": {},
    "outputs": [],
    "source": []
