chore: wip finding a better angle...

--- a/modular-joint-tuning.ipynb
+++ b/modular-joint-tuning.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thetas = np.arange(0, 124*np.pi/180, 0.01)\n",
+    "thetas = np.arange(0, 2*C, 0.01)\n",
     "pvtv = np.vectorize(phi_vs_theta)\n",
     "phis = pvtv(thetas)"
    ]
@@ -351,6 +351,14 @@
     "plt.plot(thetas*180/np.pi, phis*180/np.pi)\n",
     "plt.title(\"$\\phi$ v/s $\\Theta$\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8de0a6ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -394,6 +402,121 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "279f9f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9934065a",
+   "metadata": {},
+   "source": [
+    "### What about a larger C?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53a07846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = 80*np.pi/180\n",
+    "pvtv = np.vectorize(phi_vs_theta)\n",
+    "phis = pvtv(thetas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ffde90f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(thetas*180/np.pi, (phis + 2*thetas)*180/np.pi)\n",
+    "plt.title(\"$\\phi + 2*\\Theta$\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b977997",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54be9d66",
+   "metadata": {},
+   "source": [
+    "At roughly C=73.5 degrees, we start to see a point touching 360. Thus, we need a C > this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95187acc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9b06d58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.pi*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b3cc59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = 158.5445*np.pi/180\n",
+    "phi_vs_theta(theta) + 2*theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3caa1298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = 102.746*np.pi/180\n",
+    "phi_vs_theta(theta) + 2*theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1ddc5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "360 - 2*158.5445, 360 - 2*102.746"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b820ae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "102.746*4 + 154.508*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5f3189",
    "metadata": {},
    "outputs": [],
    "source": []
