chore: fixed poetry + old proof

--- a/pentagonal-gyrobicupola.ipynb
+++ b/pentagonal-gyrobicupola.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "fig = go.Figure(data=[vertices])\n",
-    "plotly.offline.iplot(fig, filename='pgb-scatter')"
+    "plotly.offline.iplot(fig, filename='pgb-scatter.png')"
    ]
   },
   {
@@ -176,9 +176,16 @@
    "id": "32cf1086",
    "metadata": {},
    "source": [
-    "Every segment in this piece undergoes tow intersections. Consider some segment `a`, which is intersecting `b` and `c` (top and bottom, say).<br>\n",
-    "We will arbitrarily assign a \"dominant direction\" -- i.e. the top corner of the segment `a` will be \"going over\" `b`, and `a` will be \"going under\" the bottom corner of `c`.<br>\n",
-    "Note that this object as drawn above is not chiral, but one we assign this directionality, it will become chiral."
+    "Every segment in this piece undergoes 2 intersections. Consider some segment of some link `a`, which is intersecting `b` and `c` (top and bottom, say).<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7a9c4f",
+   "metadata": {},
+   "source": [
+    "(1) Without loss of generality, we will assign a \"weave\" -- a certain segment of `a` will be \"going outside\" `b`, and `a` will be \"going inside\" `c`. (I'll be using the words \"outside/inside\" are used interchangeably with \"over/under\" -- imagine it's w.r.t the solid shape's centroid)<br>\n",
+    "Note that this object as drawn above is not chiral, but once we assign this directionality, it will become chiral."
    ]
   },
   {
@@ -186,28 +193,40 @@
    "id": "6891cd39",
    "metadata": {},
    "source": [
-    "Another thing to take care of...<br>\n",
-    "Link `a` will intersect all four other links exactly twice each -- in the followign order:<br>\n",
+    "(2) Link `a` will intersect all four other links exactly twice each -- in the following order:<br>\n",
     "`b, c, d, e, b, c, d, e`.\n",
-    "Given that each link must be huff-linked with each other one, `a` has to go over once and go under once -- each otehr link."
+    "Given that each link must be hopf-linked with each other one, `a` has to go inside once and go outside once -- each of the other links."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9702618b",
+   "id": "c37f40d4",
    "metadata": {},
    "source": [
-    "**These two conditions are a contradiction of sorts!\n",
-    "The weaving condition means that all crossings of `a` have to be over-under-over-under-...-under**.<br>\n",
-    "Is that why we need an odd number of links woven with a?!!"
+    "Here's an attempt to assign a weaving for `a`:<br>\n",
+    "`over b, under c, over d, under e, under b, over c, under d, over e`<br>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c37f40d4",
+   "cell_type": "markdown",
+   "id": "ebe92776",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "See how in order to satisfy condition 2, we need to \"break symmetry\" by having an under-under and an over-over combo consecutively..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1047fa",
+   "metadata": {},
+   "source": [
+    "Thus, it appears that such a symmetric weave will only be possibly to assign if a has odd sides & an odd number of other links to be woven with!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f20a5a0",
+   "metadata": {},
    "source": []
   }
  ],
@@ -227,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
